# pairing-comparison

./: .gitignore  LICENSE  README.md  deploy.sh  pairing_deployment.service.template  remove_automatic_deployment.sh  run_once.sh  setup_automatic_deployment.sh  show_service_logs.sh
dashboard/: Cargo.toml  index.html  pairing_dashboard.service.template  start.sh
dashboard/src/: components.rs  hooks.rs  index_reference.rs  main.rs  models.rs  wasm.rs
dashboard/src/components/: plot.rs  plot_with_settings.rs  single_plot_settings.rs
dashboard/src/hooks/: use_index.rs  use_run.rs
dashboard/src/models/: plot_settings.rs
dashboard/src/utils/: console.rs
dashboard/src/wasm/: plotly.rs
shared/: Cargo.toml  pairing_sync.service.template  sync.sh
shared/src/: analysis.rs  lib.rs  math.rs  settings.rs  statistics.rs
simulation/: Cargo.toml  e8b.txt  pairing_simulation.service.template  start.sh
simulation/src/: ga.rs  main.rs  point.rs  problems.rs  synchronization.rs
simulation/src/problems/: rofa.rs  tsp.rs
