[package]
name = "pairing"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
num_cpus = "1.17.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
threadpool = "1.8.1"
shared = { path = "../shared" }
clap = { version = "4.5.54", features = ["derive"] }
indicatif = "0.18.3"
itertools = "0.14.0"
rand_distr = "0.6.0"
rna = "0.1.2"
rand = "0.10.0"
